OnboardingV2Minimal/force-app/main/default/objects/Child_Record_Editor_Config__mdt/Child_Record_Editor_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for generic parent-child record collection editor LWC.</description>
    <label>Child Record Editor Config</label>
    <pluralLabel>Child Record Editor Configs</pluralLabel>
</CustomObject>