OnboardingV2Minimal/force-app/main/default/objects/Child_Record_Editor_Config__mdt/fields/Fields_JSON__c.field-meta.xml
<CustomField>
    <fullName>Fields_JSON__c</fullName>
    <description>JSON describing fields to render for this use case.</description>
    <label>Fields JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>