OnboardingV2Minimal/force-app/main/default/objects/Child_Record_Editor_Config__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>API name of the child object (e.g. Contact, OpportunityContactRole).</description>
    <label>Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>