OnboardingV2Minimal/force-app/main/default/objects/Child_Record_Editor_Config__mdt/fields/Parent_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Field_API_Name__c</fullName>
    <description>API name of the lookup field on the child that points to the parent (e.g. AccountId, OpportunityId).</description>
    <label>Parent Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>