OnboardingV2Minimal/force-app/main/default/objects/Child_Record_Editor_Config__mdt/fields/Relationship_Child_Field__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Child_Field__c</fullName>
    <description>Field on the relationship object for the child Id (e.g. ContactId on AccountContactRelation).</description>
    <label>Relationship Child Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>