OnboardingV2Minimal/force-app/main/default/objects/Child_Record_Editor_Config__mdt/fields/Relationship_Fields_JSON__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Fields_JSON__c</fullName>
    <description>JSON array of field configs for the relationship object (e.g. Role picklist on AccountContactRelation). Same structure as Fields_JSON__c.</description>
    <label>Relationship Fields JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>