OnboardingV2Minimal/force-app/main/default/objects/Child_Record_Editor_Config__mdt/fields/Relationship_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Object_API_Name__c</fullName>
    <description>Optional. API name of the relationship/junction object to create after child records (e.g. AccountContactRelation).</description>
    <label>Relationship Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>