OnboardingV2Minimal/force-app/main/default/objects/Child_Record_Editor_Config__mdt/fields/Relationship_Parent_Field__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Parent_Field__c</fullName>
    <description>Field on the relationship object for the parent Id (e.g. AccountId on AccountContactRelation).</description>
    <label>Relationship Parent Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>