OnboardingV2Minimal/force-app/main/default/objects/Child_Record_Editor_Config__mdt/fields/Role_Constraints_JSON__c.field-meta.xml
<CustomField>
    <fullName>Role_Constraints_JSON__c</fullName>
    <description>Optional. JSON for Role field rules: { &quot;singlePerAccountRoles&quot;: [&quot;Principal Owner&quot;], &quot;requiresPermissionRoles&quot;: [&quot;Authorized Signer&quot;], &quot;authorizedSignerPermission&quot;: &quot;Onboarding_Edit_Authorized_Signer&quot; }</description>
    <label>Role Constraints JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>